Updated with version: 3.21.0 changes

--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -420,7 +420,7 @@
     "description":"A filter list"
   },
   "filtereasylist_lite":{
-    "message":"EasyList lleugera (recomanada)",
+    "message":"EasyList Lite",
     "description":"A filter list"
   },
   "filterrussian":{
@@ -1239,6 +1239,14 @@
     "message":"Suport",
     "description":"A tab on the Options page"
   },
+  "tabtranslations":{
+    "message":"Traduccions",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"Més informació sobre com ajudar a traduir AdBlock [[[here]]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Informa sobre un anunci en aquesta pàgina",
     "description":"Entry in the AdBlock button menu"
@@ -1608,6 +1616,10 @@
   "acceptableadsdisable_how_to_reenable":{
     "message":"Podeu reactivar-ho i donar suport a les vostres pàgines web preferides seleccionant «Permet la publicitat no intrusiva».",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
+  },
+  "easylist_lite_or_easylist":{
+    "message":"Recomanem subscriure's a «EasyList Lite» o «EasyList», però no ambdós.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
   },
   "easylist_disable_done":{
     "message":"L'AdBlock utilitza EasyList per bloquejar anuncis en la majoria dels llocs web.",
