--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -420,7 +420,7 @@
     "description":"A filter list"
   },
   "filtereasylist_lite":{
-    "message":"EasyList Lite (recommended)",
+    "message":"EasyList Lite",
     "description":"A filter list"
   },
   "filterrussian":{
@@ -821,6 +821,46 @@
   },
   "lang_turkish":{
     "message":"Turkish",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"Catalan",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Chinese Simplified",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Chinese Traditional",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Croatian",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Norwegian",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Serbian",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"Slovenian",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"Vietnamese",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"Portuguese (Brazil)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"Portuguese (Portugal)",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1239,6 +1279,14 @@
     "message":"Support",
     "description":"A tab on the Options page"
   },
+  "tabtranslations":{
+    "message":"Translations",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"Learn more about how to help translate AdBlock [[here]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Report an ad on this page",
     "description":"Entry in the AdBlock button menu"
@@ -1609,6 +1657,10 @@
     "message":"You can turn this back on and support the websites you love by selecting \"Allow some non-intrusive advertising\" below.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
+  "easylist_lite_or_easylist":{
+    "message":"We recommend subscribing to either \"EasyList Lite\" or \"EasyList\" but not both.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "easylist_disable_done":{
     "message":"AdBlock uses EasyList to block ads on most websites.",
     "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
@@ -1720,5 +1772,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Original entry: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"Let me choose AdBlock's display language",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"Display AdBlock in",
+    "description":"Text shown before language selector drop-down."
   }
 }
