--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -420,7 +420,7 @@
     "description":"A filter list"
   },
   "filtereasylist_lite":{
-    "message":"EasyList Lite (推荐)",
+    "message":"EasyList Lite",
     "description":"A filter list"
   },
   "filterrussian":{
@@ -1239,6 +1239,14 @@
     "message":"技术支持",
     "description":"A tab on the Options page"
   },
+  "tabtranslations":{
+    "message":"翻译",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"了解更多协助翻译 AdBlock 的信息 [[here]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"报告这个页面上的广告",
     "description":"Entry in the AdBlock button menu"
@@ -1608,6 +1616,10 @@
   "acceptableadsdisable_how_to_reenable":{
     "message":"您可以通过勾选下面的“允许一些非侵入式广告”来重新启用它并支持一些您喜爱的网站。",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
+  },
+  "easylist_lite_or_easylist":{
+    "message":"我们推荐您订阅 \"EasyList Lite\" 或 \"EasyList\", 但不要同时订阅这两者。",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
   },
   "easylist_disable_done":{
     "message":"AdBlock使用EasyList来屏蔽大多数网站上的广告。",
